fixed issue with z-index..

--- a/app/styles/pages/style.less
+++ b/app/styles/pages/style.less
@@ -192,7 +192,6 @@ table.text-align-left {
     position: absolute;
     top: 0;
     width: 100%;
-    z-index: 1;
 }
 .footer {
 	color: #F8F8F8;
@@ -204,5 +203,4 @@ table.text-align-left {
     padding: 5px 0;
     position: absolute;
     width: 100%;
-    z-index: 2;
 }
